Ignore tex build files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,36 @@ data/
 __pycache__/
 model/
 log.txt
+
+###############################################
+# LaTex files
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
+*.xdv
+
+###############################################
+# VS Code Latex Stuff
+
+*.fdb_latexmk
+*.fls
